--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ dev-dist
 # Sentry Config File
 .env.sentry-build-plugin
 
+# Environment variables
+.env
+.env.local
+.env.*.local
 
 db.sqlite
 *.key
