--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"cmdk": "^1.0.0",
 		"date-fns": "^4.1.0",
 		"dayjs": "^1.11.13",
+		"firebase": "^12.6.0",
 		"framer-motion": "^11.9.0",
 		"next-themes": "^0.3.0",
 		"react": "^18.3.1",
